Fixed descriptions a bit.